samples/_failures_safe/1761128765_b0e6a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_329edd3c.c: In function ‘main’:
./samples/SAFE/__tmp_329edd3c.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\nMatrix 1:\n");
      |     ^~~~~~
